compiler/tests/fail/register_allocation/bug_309.jazz
export
fn test(reg u64 x) -> reg u64 {
  reg u64 r;
  reg bool cf;
  cf, x = x + x;
  r = #set0();
  r = x if cf;
  return r;
}
